Fix alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,7 +29,7 @@ pre code {
 
 .social {
 	margin: 0 auto;
-	width: 200px;
+	width: 300px;
 	text-align: center;
 
 	a { margin: 0 0.6em; }
